--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
                             <div class="project-tags">
                                 <span class="tag">HTML5</span>
                                 <span class="tag">CSS3</span>
+                                <span class="tag">PHP</span>
+                                <span class="tag">MySQL</span>
                             </div>
                         </div>
                     </article>
@@ -155,7 +157,9 @@
                             <div class="project-tags">
                                 <span class="tag">HTML5</span>
                                 <span class="tag">CSS3</span>
-                                <span class="tag">Ciberseguridad</span>
+                                <span class="tag">PHP</span>
+                                <span class="tag">MySQL</span>
+                                <span class="tag">JavaScript</span>
                             </div>
                         </div>
                     </article>
